# veeks_millis

./: Cargo.toml  Makefile.toml  README.md
docs/: index.html  search-index.js  settings.html  source-files.js
docs/src/veek_millis/: lib.rs.html  veeks_millis_mod.rs.html
docs/src/veeks_millis/: lib.rs.html  micro_time_mod.rs.html  milli_time_mod.rs.html  veek_date_mod.rs.html  veeks_millis_mod.rs.html
docs/veek_millis/: all.html  fn.micros_from_str_opt.html  fn.micros_to_seconds.html  fn.millis_from_str_opt.html  fn.millis_to_naive_time_opt.html  fn.naive_date_to_veek_date.html  fn.naive_time_to_millis_f64.html  fn.naive_time_to_millis_str.html  fn.seconds_to_micros.html  fn.veek_to_naive_date_opt.html  index.html  sidebar-items.js
docs/veek_millis/veeks_millis_mod/: fn.micros_from_str_opt.html  fn.micros_to_seconds.html  fn.millis_from_str_opt.html  fn.millis_to_naive_time_opt.html  fn.naive_date_to_veek_date.html  fn.naive_time_to_millis.html  fn.naive_time_to_millis_str.html  fn.seconds_to_micros.html  fn.veek_to_naive_date_opt.html  index.html  sidebar-items.js
docs/veeks_millis/: all.html  fn.micros_from_str_opt.html  fn.micros_to_seconds.html  fn.millis_from_str_opt.html  fn.millis_to_naive_time_opt.html  fn.naive_date_to_veek_date.html  fn.naive_time_to_millis.html  fn.naive_time_to_millis_str.html  fn.seconds_to_micros.html  fn.veek_to_naive_date_opt.html  index.html  sidebar-items.js  struct.MicroTime.html  struct.MilliTime.html  struct.VeekDate.html
src/: lib.rs  micro_time_mod.rs  milli_time_mod.rs  veek_date_mod.rs  veeks_millis_mod.rs
(+26 files in other folders)
