[package]
name = "veeks_millis"
version = "1.0.2"
authors = ["Luciano Bestia <Luciano.Bestia@gmail.com>"]
edition = "2018"
description = "2021 new date time units and formats: veeks and millis"
repository = "https://github.com/LucianoBestia/veeks_millis"
readme = "README.md"
license = "MIT"
keywords = ["date","time","veeks","millis"]
categories = ["date-and-time"]
# publish as a crates.io library. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*",
]

[dependencies]
unwrap = "1.2.1"
chrono = "0.4.19"
regex = "1.4.3"